Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69379

Textures aren't properly recreated

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.11.2
    • 5.11
    • Qt3D
    • None
    • d47c78e6557856da4c0719caf2764b2fbfe2335d

    Description

      If a Texture is destroyed and then recreated (with the changes being distributed within the same loop), textures are not properly recreated. This is a regression introduced by the fix on parenting elements to parents with no backend.

      Attachments

        For Gerrit Dashboard: QTBUG-69379
        # Subject Branch Project Status CR V

        Activity

          People

            lemire_p Paul Lemire
            lemire_p Paul Lemire
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes