Renderer: do not lookup cleanup textures

Since they are already destroyed, cleanup textured ids shouldn't be used to
look up backend textures but only to tell the GLTextureManager to abandon
referenced textures. The was an oversight that should have been handled in
d47c78e6.

Change-Id: Iafaee4bb6442c907f6e011c80b5e5347579efde5
Task-number: QTBUG-69379
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>